--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,7 @@ nav>a {
     box-shadow: 4px 4px 2px 0px #000000;
 }
 
+
 header>h2 {
     margin: 0 auto;
     font-size: 1.8rem;
@@ -114,8 +115,7 @@ header>h2 {
     flex-direction: column;
 }
 .img {
-    width: 100%;
-    
+    width: 100%; 
 }
 h1 {
     font-size: 2.5rem;
@@ -201,7 +201,6 @@ h1 {
 
 .section_article_three>img {
     width: 50%;
-
 }
 
 .section_div_three {
@@ -239,6 +238,7 @@ h1 {
     background-position: center;
     background-repeat: no-repeat;
 }
+
 
 .section_article_four {
     display: flex;
@@ -284,6 +284,7 @@ h1 {
     font-size: 1.2rem;
 }
 
+
 /* ********* Section 5 "any questions?!" ********* */
 .article_five {
     margin-bottom: 5vh;
@@ -325,5 +326,154 @@ footer {
 .footer_article>p>a {
     color: black;
     text-decoration: none;
+}
+
+/* --------------------------- */
+
+.mobil_menu {
+    display: none;
+    padding: 10px;
+}
+.mobil_menu span {
+    display: block;
+    background-color: black;
+    margin: 3px 0;
+    width: 50px;
+    height: 5px;
+}
+
+@media only screen and (max-width: 576px){
+    h3 {
+        font-size: 2.5rem;
+    }
+
+    header nav a li {
+        display: none;
+    }
+
+    .mobil_menu {
+        display: block;
+    }
+
+    header {
+        align-items: center;
+    }
+
+    .btn {
+        font-size: 1rem;
+        padding: 5px 20px;
+        margin-left: 0;
+    }
+
+    .hero_section>h1 {
+        margin-top: 6vh;
+        font-size: 1.3rem;
+    }
+
+    .hero_article {
+        margin: 5vh 0;
+        padding: 5% 10%;
+    }
+
+    .hero_article>p {
+        word-break:keep-all;
+        font-size: 1.1rem;
+        line-height: 2.5vh;
+    }
+
+    .hero_div>p:first-child {
+        font-size: 3rem;
+    }
+
+    .hero_div>p:nth-child(2) {
+        padding-top: 1vh;
+        font-size: 1.2rem;
+    }
+
+    .section_style{
+        padding: 0 5vh;
+    }
+
+    .second_section {
+        flex-direction: column;
+    }
+
+    .second_section_div {
+        width: 100%;
+    }
+
+    .second_section_div>h3 {
+        margin: 4vh 0 3vh 0;
+    }
+
+    .second_section_div>h4 {
+        font-size: 1.2rem;
+        margin-bottom: 2vh;
+    }
+
+    .section_article_three {
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    .section_article_three>img {
+        width: 100%;
+    }
+
+    .section_div_three>h3 {
+        margin-bottom: 1vh;
+    }
+
+    .section_div_three>ol {
+        width: 100%;
+        word-break: break-word;
+        padding-left: 1vh;
+    }
+
+    .section_div_three>ol>li {
+        margin-bottom: 1vh;
+    }
+
+    .section_article_four>h3 {
+        margin: 5vh 0 4vh;
+    }
+
+    .section_article_four {
+        margin-bottom: 50vh;
+    }
+
+    .section_article_four>p {
+        text-align: center;
+        word-break:keep-all;
+        width: 75%;
+        margin-bottom: 2vh;
+    }
+
+    .section_four {
+        background-size: 150%;
+        background-position: center;
+    }
+
+    .mini_man>img {
+        left: 20%;
+        bottom: 28vh;
+        width: 80%;
+    }
+
+    .mini_man>p {
+        word-break: keep-all;
+        left: 0%;
+        bottom: 34vh;
+        line-height: 2.5vh;
+        font-size: 0.80rem;
+    }
+
+    .footer_article>p {
+        font-size: 15px;
+    }
+
+    .footer_article>img {
+        width: 20%;
+    }
 
 }
