--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ p {
     font-family: graphik_reg;
 }
 
+
 section {
     margin: 0 auto;
 }
@@ -64,10 +65,16 @@ section {
 
 
 header {
-    margin: 0 auto;
+    margin: 3vh auto;
     display: flex;
     justify-content: space-around;
     align-items: baseline;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
 }
 
 nav {
@@ -82,7 +89,7 @@ nav>a {
 }
 
 .btn {
-    margin: 0 5vh;
+    margin: 0 5vh 0 1vw;
     font-size: 1.2rem;
     padding: 5px 40px;
     background-color: white;
@@ -94,9 +101,14 @@ nav>a {
     color: white;
     background-color: black;
     border: 2px solid white;
-    box-shadow: 4px 4px 2px 0px #000000;
+    box-shadow: 4px 4px 0px 0px #000000;
 }
 
+#myButton{
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    font-size: 20px;
+}
 
 header>h2 {
     margin: 0 auto;
@@ -120,7 +132,7 @@ header>h2 {
 h1 {
     font-size: 2.5rem;
     text-align: center;
-    margin: 5% 0;
+    margin: 20vh 0 15vh 0;
 }
 
 .hero_article {
