--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,6 @@ body {
 }
 
 main {
-
     margin: 0 auto;
 }
 
@@ -40,7 +39,7 @@ h2, h3 {
     font-family: tiempo;
 }
 
-h4, button {
+.procent,h4, button {
     font-family: graphik_med;
 }
 
@@ -142,22 +141,24 @@ h1 {
 }
 
 .hero_article>p {
-    color: black;
-    font-family: graphik_med;
     margin-right: 10%;
     width: 85%;
     font-size: 1.4rem;
+}
+
+.change_colour{
+    font-family: graphik_med;
+}
+
+.price{
+    font-size: 4rem;
+    color: black;
 }
 
 .hero_div {
     flex-direction: column;
 }
 
-.hero_div>p:first-child {
-    color: black;
-    font-size: 4rem;
-    font-family: graphik_reg;
-}
 
 .hero_div>p:nth-child(2) {
     padding-top: 2vh;
@@ -207,8 +208,11 @@ h1 {
 
 .section_article_three {
     display: flex;
-    background-color: rgb(238, 236, 243);
     margin-top: 15vh;
+}
+
+.bg {
+    background-color: #eeecf3;
 }
 
 .section_article_three>img {
@@ -245,10 +249,16 @@ h1 {
 /*  ***** fourth section ***** */
 
 .section_four {
-    background-image: url('../img/28.png');
+/*  background-image: url('../img/28.png');
     background-size: contain;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
+}
+
+.procent{
+    font-size: 25rem;
+    color: #9fa2a74e ;
+    margin-top: 5vh;
 }
 
 
@@ -256,7 +266,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 70vh;
+    margin-bottom: 14vh;
 }
 
 .section_article_four>h3 {
@@ -290,7 +300,7 @@ h1 {
     position: relative;
     z-index: 999;
     left: 18%;
-    bottom: 56vh;
+    bottom: 62vh;
     color: #9FA2A7;
     line-height: 4vh;
     font-size: 1.2rem;
@@ -336,7 +346,7 @@ footer {
 }
 
 .footer_article>p>a {
-    color: black;
+    color: rgb(242, 255, 0);
     text-decoration: none;
 }
 
